bugfix: Make advantage blocks more responsive
- Added more responsive fonts by adding function calc and media queries
- Fixed icon in advantage blocks which overlapped text
- Small fix of img in promotions section

--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -2,6 +2,7 @@
 
 $color-black: #0e0c0d;
 $color-dark-gray: #231f20;
+$color-medium-gray: #473e43;
 $color-white: #fff;
 $color-yellow: #f7d22d;
 
