--- a/scss/layout/_promotions.scss
+++ b/scss/layout/_promotions.scss
@@ -40,8 +40,9 @@
   &__woman-img {
     position: absolute;
     top: 92%;
-    right: 0;
+    right: -3%;
     width: 7.9rem;
     transform: rotateY(180deg);
+    z-index: -1;
   }
 }
